--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=8.0.0"
   },
   "scripts": {
@@ -12,35 +12,36 @@
     "build:static": "DEPLOY_TARGET=static next build",
     "start": "next start",
     "export": "next export",
-    "lint": "next lint --fix",
+    "lint": "next lint",
     "deploy:hostinger": "npm run build:static && echo 'Upload files from /out folder to Hostinger public_html'",
     "deploy:vercel": "vercel --prod",
     "db:init": "node scripts/initDatabase.js",
     "db:test": "node scripts/testConnection.js",
     "db:seed": "node scripts/seedDatabase.js",
-    "postbuild": "echo 'Build completed successfully!'"
+    "postbuild": "echo 'Build completed. Check /out directory for static files.'"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.11.17",
+    "critters": "^0.0.23",
+    "dotenv": "^17.2.1",
+    "framer-motion": "^10.18.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.3",
-    "next": "^14.2.18",
-    "next-auth": "^4.24.10",
-    "postcss": "^8.4.49",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "next": "^15.5.0",
+    "next-auth": "^4.24.0",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
-    "swiper": "^11.1.15",
-    "tailwindcss": "^3.4.14"
+    "swiper": "^10.3.1",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.12",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "^14.2.18"
+    "@types/leaflet": "^1.9.8",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.4.6"
   }
 }
